Content update & minor fixes

--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,6 +4,8 @@ layout: page
 title: Please Donate
 ---
 
+<div class="rellax about-parallax" data-rellax-speed="-4" data-rellax-percentage="0.5"></div>
+
 <h1>Hear We Art is totally dependent on donations. To make the 2018 workshops happen we need <a href="#budget">£11,000</a>*</h1>
 
 <p>This will allow us to deliver the workshops to 100 or so children. Please <strong>help us bring joy, fulfilment and potentially transform the life chances of these children</strong>.</p>
@@ -29,3 +31,6 @@ title: Please Donate
   <p class="text-center"><strong>Hear We Art</strong> is run by donation, which are 100% directed to help us running our yearly workshops. Scroll down if you want to donate or if you are thinking about joining us!</p>
 </section>
 -->
+
+<script src="{{ 'node-assets/rellax/rellax.min.js' | relative_url }}"></script>
+<script>new Rellax('.rellax')</script>
