--- a/_pages/index.html
+++ b/_pages/index.html
@@ -3,70 +3,49 @@ permalink: "/"
 layout: default
 ---
 
-<section class="home-section home-section-main">
+<div class="home-section-main">
   <div class="text-center">
     <h1 class="no-margin uppercase">Hear We Art</h1>
     <h2 class="no-margin">empowering through creativity</h2>
   </div>
-</section>
+</div>
 
-<section class="home-section">
-  <div class="content-container pure-g">
-    <div class="pure-u-1-3">
-      <div class="light-padding">
-        <p class="light-padding light-border-radius very-light-orange-bg">What is Hear We Art?</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-      </div>
-    </div>
 
-    <div class="pure-u-1-3">
-      <div class="light-padding">
-        <p class="light-padding light-border-radius very-light-orange-bg">News & Activities</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-      </div>
-    </div>
+<div class="pure-g">
 
-    <div class="pure-u-1-3">
-      <div class="light-padding">
-        <p class="light-padding light-border-radius very-light-orange-bg">Donate</p>
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-      </div>
+  <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+    <div class="light-padding">
+      <p class="light-padding light-border-radius medium-orange-bg">Hear We Art in Summary</p>
+      <p>Hear We Art is a charitable project enabling professional artists, designers and other creatives to deliever creative workshops to <strong>poor, deaf  Sri Lankan children</strong></p>
+
+      <p>Hear We Art has clearly defined aims, key among which are to:
+        <ul>
+          <li>Help the children acquire vocationally oriented skills and capabilities.</li>
+          <li>Boost the children’s confidence and self-esteem and at the same time bring joy, pride and sense of achievement.</li>
+          <li>Involve local creatives and teachers in the programme, to both promote the objective developing autonomy and help build links to the community which can help children transition to much more worthwhile work.</li>
+        </ul>
+      </p>
     </div>
   </div>
 
-  <div class="content-container">
-    <p class="heavy-top-margin">Hear We Art is a charitable project enabling a small group of British, Italian and this year, local Sri Lankan professional artists, designers, other creatives to develop and deliver, once a year, workshops to <strong>poor, deaf Sri Lankan children</strong> aged between 5 and 16 (some of whom are also orphans,) who attend the <a href="https://senkadagaladbs.blogspot.com/">Senkadagala Boarding School</a> in Kandy, Sri Lanka.</p>
+  <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+    <div class="light-padding">
+      <p class="light-padding light-border-radius medium-orange-bg">News & Activities</p>
+      <p>This year, we will  be running four courses: Graphic Design, Photography, Wood Carving and Mural Art. The three main courses are aimed at giving students some work-related skills which will help them in find a  much better place in the community, economically and socially, when they finish their studies</p>
 
-    <p>The workshops consist of  Graphic Design, Photography, Wood Carving and Mural Art, all of which are <strong>seen as priorities by the school</strong>. The teaching methods have been carefully developed to deal with and embrace language differences and communication challenges, so as <strong>allow the children to develop their dormant creative abilities</strong> and <strong>not be inhibited by their</strong> disabilities (for further detail click here).</p>
+      <img class="medium-left-margin float-right" alt="TODO" src="http://via.placeholder.com/260x200?text=THUMB">
 
-    <p class="heavy-bottom-margin">Senkadagala school receives state funding and must therefore follow the <strong>national curriculum</strong>, which makes no concession to, and offers no special support for, children with disabilities, consequently, the great majority struggle, leave school with very low educational attainment and with no vocational skills. Combined with their disabilities, this means, <strong>regardless of talent, they are condemned to do the most menial, poorly paid jobs, assuming they are able to find any work at all</strong>.</p>
-
-    <section class="youtube">
-      <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </section>
-
-    <ul>
-      <h2>Hear We Art has clearly defined aims, key among which are to:</h2>
-
-      <li>Help the children acquire vocationally oriented skills and capabilities which are potentially <strong>transformative in terms of their prospects of finding economically worthwhile and fulfilling work</strong>.</li>
-
-      <li><strong>Boost the children’s confidence and self-esteem</strong> and at the same time <strong>bring joy, pride and sense of achievement</strong>. Thereby reinforce their commitment to the school.</li>
-
-      <li>Fully involve, train and transfer skills to Senkadagala’s teachers so as to be able progress to a stage where they have the ability to run such programmes on their own.</li>
-
-      <li class="heavy-bottom-margin"><strong>Involve local creatives and craftsmen</strong> in the programme, to both promote the objective developing autonomy and help build links to the community which can help children transition to much more worthwhile work.</li>
-    </ul>
+    </div>
   </div>
-</section>
 
-<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-4" data-rellax-percentage="0.5">
-</section>
+  <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+    <div class="light-padding">
+    <p class="light-padding light-border-radius medium-orange-bg">Donate</p>
+    <p>Hear We Art is totally dependent on donations. To make the 2018 workshops happen we need your help.
 
-<section class="home-section">
-  <div class="content-container">
-    <p>Hear We Art piloted the first <a href="{{ '2017-pilot-program' | relative_url }}">workshops in 2017</a>, which were <strong>judged a great success</strong> by the children, their families, the teachers and <a href="{{ 'the-school' | relative_url }}">the school management</a> all of whom insist we return in 2018!</p>
+Thanks to your support we’ll be able to send three artists and creatives to Sri Lanka and pay for the involvement of several local creatives and craftsmen .We plan to buy four more computers, ten cameras plus all the related software and tools and materials for the workshops (such as stencils, photography materials, wood carving tools etc.)..</p>
+
+    <button class="button-xlarge button-secondary pure-button">Extra Large Button</button>
+    </div>
   </div>
-</section>
-
-<script src="{{ 'node-assets/rellax/rellax.min.js' | relative_url }}"></script>
-<script>new Rellax('.rellax')</script>
+</div>
