--- a/_pages/projects/2017-pilot-program.html
+++ b/_pages/projects/2017-pilot-program.html
@@ -50,6 +50,6 @@ title: The 2017 Pilot Program
 
   <img
     alt="Final Exhibition, Hear We Art 2017"
-    class="pure-u-1 heavy-bottom-margin"
+    class="pure-u-1 medium-bottom-margin"
     src="{{ 'assets/img/2017-pilotproject-5.jpg' | relative_url }}">
 </div>
