--- a/_pages/the-school.html
+++ b/_pages/the-school.html
@@ -6,11 +6,15 @@ title: The School
 
 <div class="content-container">
 
+  <img class="pure-u-1 pure-u-md-1-2 float-right medium-left-margin" src="{{ 'assets/img/the-school-1.jpg' | relative_url }}">
+
   <h1>Senkadagala School for Deaf and Blind Children</h1>
 
   <p>Senkadagala Deaf and Blind School, in Kandy, Sri Lank, was founded in 1962, by the president of the Ceylon Association for the Blind, as a boarding school for children aged 3 to 18, from all over the country. The school hostel provides food and accommodation, free of charge, as most of the children come from very poor families in rural parts of the country. As government financial resources are very limited, the school also relies on the support of The International Philanthropic Society of Sweden, whose funding is used to improve children’s health, hygiene and living conditions. The school also receives support from private patrons who help meet the cost of food and maintenance.</p>
 
   <p>Since its foundation, Senkadagala School has striven to promote the children’s well-being and their integration into the local environment. However, the school has to follow the unified national school curriculum which means the children have to follow the same program as every other school in the country. As the curriculum is not at all adapted to children’s disabilities, most if not all struggle to keep-up, especially with academic subjects. Whilst many of the pupils are very talented in art and creative subjects, unfortunately these have no place in the normal state curriculum. The school has almost no resource, or expertise, to teach creative subjects, nor provide any vocationally oriented education.</p>
+
+  <img class="pure-u-1 pure-u-md-1-2 float-left medium-top-margin medium-right-margin" src="{{ 'assets/img/the-school-2.jpg' | relative_url }}">
 
   <p>As a result, the children usually leave school with poor academic results which means few are able to move on to further education and the absence of vocational training means the great majority of pupils have to get unskilled, very poorly paid work, if they find anything at all.</p>
 
@@ -31,11 +35,15 @@ title: The School
     <p>Student</p>
 
     <blockquote>This workshop not only gave students practical information, but it also set an example for its enthusiastic tutors and the love and passion that has been transmitted with the project. Everybody in the school has been inspired by that.</blockquote>
-    <p class="heavy-bottom-margin">School teacher</p>
+    <p>School teacher</p>
+
+    <blockquote>The school motto is centered upon the happiness of these needy kids, and administration believes that this would be an instant success among the children.
+    <strong>Let me elaborate on the importance of your project to the school</strong>. I recently indulged the school children with a treat for my birthday, and I noticed some children with extreme frustration. The matron informed me that the communication barrier is the reason for their frustration. These children need some form to express their feelings and thoughts. Your suggested proposal is beyond ideal for these kids.</blockquote>
+    <p class="heavy-bottom-margin">PRABBAT</p>
+
   </div>
 </section>
 
-<div class="content-container">
-  <p>The school motto is centered upon the happiness of these needy kids, and administration believes that this would be an instant success among the children.
-<strong>Let me elaborate on the importance of your project to the school</strong>. I recently indulged the school children with a treat for my birthday, and I noticed some children with extreme frustration. The matron informed me that the communication barrier is the reason for their frustration. These children need some form to express their feelings and thoughts. Your suggested proposal is beyond ideal for these kids.</p>
-</div>
+
+
+
