--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -4,12 +4,12 @@ layout: default
 title: Who We Are
 ---
 
-<section class="rellax who-we-are-parallax" data-rellax-speed="-6" data-rellax-percentage="0.65">
-</section>
+<div class="rellax who-we-are-parallax" data-rellax-speed="-6" data-rellax-percentage="0.65">
+</div>
 
 <div class="rellax white-bg" data-rellax-speed="0" very-light-gray-bg">
   <div class="content-container">
-    <h1>The <em>Hear We Art</em> Team</h1>
+    <h1>The Hear We Art Team</h1>
 
     <p>We are a group of artists, creatives and designers who work together to create workshops tailored to the needs of students with visual and hearing impairments.</p>
 
