--- a/_pages/contact-us.html
+++ b/_pages/contact-us.html
@@ -4,34 +4,35 @@ layout: default
 title: Contact Us
 ---
 
-<section class="contact-us">
-  <h3 class="light-blue uppercase">Contact Us</h3>
+<div class="contact-us">
+  <div class="pure-g content-container heavy-vertical-padding">
 
-  <p class="no-margin contact-message">If you want to collaborate, know more, donate or just feeling like say hello, don't hesitate to drop us an email and tell us what you think about the project!</p>
+    <div class="pure-u-1 pure-u-md-1-2">
+      <form class="pure-form pure-form-stacked">
+        <!-- TODO <legend>Contact form</legend> -->
 
-  <p class="heavy-vertical-margin">
-    <a class="dark-blue" href="mailto:{{ site.email }}">{{ site.email }}</a>
-  </p>
+        <fieldset>
 
-  <form class="content-container pure-form pure-form-stacked">
-    <fieldset>
-      <legend>Contact form</legend>
+          <label class="pure-u-1" for="name">Your name</label>
+          <input class="pure-u-1" id="name" type="text">
 
-      <div class="pure-g">
-        <label class="pure-u-1" for="name">Your name</label>
-        <input class="pure-u-1" id="name" type="text">
+          <label class="pure-u-1" for="email">Your email <span class="pure-form-message">(required)</span></label>
+          <input class="pure-u-1" id="email" type="email" required>
 
-        <label class="pure-u-1" for="email">Your email <span class="pure-form-message">(required)</span></label>
-        <input class="pure-u-1" id="email" type="email" required>
+          <label class="pure-u-1" for="subject">Subject <span class="pure-form-message">(required)</span></label>
+          <input class="pure-u-1" id="subject" type="text" required>
 
-        <label class="pure-u-1" for="subject">Subject</label>
-        <input class="pure-u-1" id="subject" type="text">
+          <label class="pure-u-1" for="message">Your message <span class="pure-form-message">(required)</span></label>
+          <textarea class="pure-u-1" id="message" required></textarea>
 
-        <label class="pure-u-1" for="message">Your message <span class="pure-form-message">(required)</span></label>
-        <textarea class="pure-u-1" id="message" required></textarea>
-      </div>
+          <button type="submit" class="pure-button">Send</button>
+        </fieldset>
+      </form>
+    </div>
 
-      <button type="submit" class="pure-button">Send</button>
-    </fieldset>
-  </form>
-</section>
+    <div class="pure-u-1 pure-u-md-1-2 google-map">
+      <iframe class="pure-u-1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d371.3412053357151!2d12.471391999999996!3d41.896332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa5bf0308f8949919!2sArco+degli+Acetari!5e0!3m2!1sen!2sit!4v1532116424696" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+  </div>
+</div>
