--- a/_pages/contact-us.html
+++ b/_pages/contact-us.html
@@ -4,7 +4,10 @@ layout: default
 title: Contact Us
 ---
 
-<div class="contact-us">
+<div class="rellax contact-us-parallax" data-rellax-speed="-6" data-rellax-percentage="0.65">
+</div>
+
+<div class="contact-us rellax">
   <div class="pure-g content-container heavy-vertical-padding">
 
     <div class="pure-u-1 pure-u-md-1-2">
@@ -36,3 +39,6 @@ title: Contact Us
 
   </div>
 </div>
+
+<script src="{{ 'node-assets/rellax/rellax.min.js' | relative_url }}"></script>
+<script>new Rellax('.rellax')</script>
