--- a/_pages/contact-us.html
+++ b/_pages/contact-us.html
@@ -7,6 +7,8 @@ title: Contact Us
 <div class="contact-us rellax">
   <div class="pure-g content-container heavy-vertical-padding">
 
+    <h1 class="pure-u-1 no-margin">Contact us</h1>
+
     <div class="pure-u-1 pure-u-md-1-2">
       <form class="pure-form pure-form-stacked">
         <!-- TODO <legend>Contact form</legend> -->
