Content update (no parallax)

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -25,6 +25,9 @@ layout: default
           <li>Involve local creatives and teachers in the programme, to both promote the objective developing autonomy and help build links to the community which can help children transition to much more worthwhile work.</li>
         </ul>
       </p>
+
+      <a href="{{ 'donate' | relative_url }}" class="pure-button medium-orange-bg">Learn more</a>
+
     </div>
   </div>
 
@@ -33,8 +36,11 @@ layout: default
       <p class="light-padding light-border-radius medium-orange-bg">News & Activities</p>
       <p>This year, we will  be running four courses: Graphic Design, Photography, Wood Carving and Mural Art. The three main courses are aimed at giving students some work-related skills which will help them in find a  much better place in the community, economically and socially, when they finish their studies</p>
 
-      <img class="medium-left-margin float-right" alt="TODO" src="http://via.placeholder.com/260x200?text=THUMB">
+      <a href="{{ 'donate' | relative_url }}" class="pure-button medium-orange-bg medium-bottom-margin">Learn more</a>
 
+      <div class="youtube">
+        <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
 
@@ -45,7 +51,8 @@ layout: default
 
 Thanks to your support we’ll be able to send three artists and creatives to Sri Lanka and pay for the involvement of several local creatives and craftsmen .We plan to buy four more computers, ten cameras plus all the related software and tools and materials for the workshops (such as stencils, photography materials, wood carving tools etc.)..</p>
 
-    <button class="button-xlarge button-secondary pure-button">Extra Large Button</button>
+    <a href="{{ 'donate' | relative_url }}" class="pure-button medium-orange-bg">Donate</a>
+
     </div>
   </div>
 </div>
