--- a/_pages/about.html
+++ b/_pages/about.html
@@ -22,7 +22,7 @@ title: About
 <p class="heavy-bottom-margin">Senkadagala school receives state funding and must therefore follow the <strong>national curriculum</strong>, which makes no concession to, and offers no special support for, children with disabilities, consequently, the great majority struggle, leave school with very low educational attainment and with no vocational skills. Combined with their disabilities, this means, <strong>regardless of talent, they are condemned to do the most menial, poorly paid jobs, assuming they are able to find any work at all</strong>.</p>
 
 <ul>
-  <h2>Hear We Art has clearly defined aims, key among which are to:</h2>
+  <h2>Hear We Art's key aims are:</h2>
 
   <li>Help the children acquire vocationally oriented skills and capabilities which are potentially <strong>transformative in terms of their prospects of finding economically worthwhile and fulfilling work</strong>.</li>
 
