Minor graphic fixes

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -6,10 +6,11 @@ title: About
 
 <h1>About us</h1>
 
-<!-- TODO center -->
-<div class="pure-u-3-4">
-  <div class="youtube auto-margin">
-    <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div class="pure-g">
+  <div class="pure-u-3-4 auto-margin">
+    <div class="youtube ">
+      <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
 
